# GeneSpectra

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  setup.py  test_gene_classification.py
genespectra/: __init__.py  main.py  run_classification_sum_cell_pools.py
genespectra.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
genespectra/cross_species/: __init__.py  gene_homology.py  plot_cross_species_categories.py
genespectra/gene_classification/: __init__.py  classify_genes.py  gene_topics.py  go_anno_classified_genes.py  plot_categories.py  plotting.py
genespectra/logit_marker/: __init__.py  logit_marker.py
genespectra/metacells/: __init__.py  make_metacells.py
genespectra/scripts/: run_classification_sum_cell_pools.py
src/genespectra/: __init__.py  main.py  run_classification_sum_cell_pools.py
src/genespectra/cross_species/: compare_cell_types.py
src/genespectra/gene_classification/: go_anno_classified_genes.py  plotting.py
tests/: test_gene_classification.py
tests/cross_species/: gene_homology_tests.py
