[project]
name = "genespectra"
version = "0.2.0"
authors = [
  { name="Yuyao Song", email="ysong@ebi.ac.uk" },
]
maintainers = [
  { name="Yuyao Song", email="ysong@ebi.ac.uk" },
]
description = "Gene classification and cross-species comparison of single cell RNA-seq data"
readme = "README.md"

requires-python = "==3.9"

license = {text = "MIT License"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["numpy==1.26.0", "metacells==0.9.4", "scanpy==1.9.6", "anndata==0.8.0", "biomart>=0.9.2,<0.10", "click>=8.1.7,<9", "scipy>=1.13.1,<2", "plotly>=5.24.1,<6"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project.urls]
Homepage = "https://github.com/Papatheodorou-Group/GeneSpectra"
Issues = "https://github.com/Papatheodorou-Group/GeneSpectra/issues"

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
genespectra = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.environments]
test = { features = ["test"], solve-group = "default" }
default = { solve-group = "default" }

[dependency-groups]
test = ["pytest", "black"]
